--- a/Red Running/Assembly-CSharp.csproj
+++ b/Red Running/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\bgfollow.cs" />
      <Compile Include="Assets\camerafollow.cs" />
      <Compile Include="Assets\player_controller.cs" />
      <None Include="Assets\BayatGames\Free Platform Game Assets\Readme.txt" />
