--- a/Red Running/Assembly-CSharp.csproj
+++ b/Red Running/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\bgfollow.cs" />
      <Compile Include="Assets\camerafollow.cs" />
      <Compile Include="Assets\player_controller.cs" />
+     <Compile Include="Assets\timer.cs" />
      <None Include="Assets\BayatGames\Free Platform Game Assets\Readme.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
