--- a/Red Running/Assembly-CSharp.csproj
+++ b/Red Running/Assembly-CSharp.csproj
@@ -52,7 +52,10 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\controller_menu.cs" />
+     <Compile Include="Assets\MainMenu.cs" />
      <Compile Include="Assets\movingBg.cs" />
+     <Compile Include="Assets\movingfloor.cs" />
+     <Compile Include="Assets\RetryMenu.cs" />
      <Compile Include="Assets\Script\bgfollow.cs" />
      <Compile Include="Assets\Script\camerafollow.cs" />
      <Compile Include="Assets\Script\PauseMenu.cs" />
