--- a/Red Running/Assembly-CSharp.csproj
+++ b/Red Running/Assembly-CSharp.csproj
@@ -51,11 +51,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\FixBlock.cs" />
-     <Compile Include="Assets\Mace_Sc.cs" />
+     <Compile Include="Assets\saw.cs" />
      <Compile Include="Assets\Script\bgfollow.cs" />
      <Compile Include="Assets\Script\camerafollow.cs" />
      <Compile Include="Assets\Script\controller_menu.cs" />
+     <Compile Include="Assets\Script\FixBlock.cs" />
+     <Compile Include="Assets\Script\Mace_Sc.cs" />
      <Compile Include="Assets\Script\MainMenu.cs" />
      <Compile Include="Assets\Script\movingBg.cs" />
      <Compile Include="Assets\Script\movingfloor.cs" />
