--- a/Red Running/Assembly-CSharp.csproj
+++ b/Red Running/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\enermy.cs" />
+     <Compile Include="Assets\HighScore.cs" />
      <Compile Include="Assets\Script\bgfollow.cs" />
      <Compile Include="Assets\Script\camerafollow.cs" />
      <Compile Include="Assets\Script\coin.cs" />
