--- a/Red Running/Assembly-CSharp.csproj
+++ b/Red Running/Assembly-CSharp.csproj
@@ -65,9 +65,9 @@
      <Compile Include="Assets\Script\PauseMenu.cs" />
      <Compile Include="Assets\Script\player_controller.cs" />
      <Compile Include="Assets\Script\RetryMenu.cs" />
-     <Compile Include="Assets\Script\Saw.cs" />
+     <Compile Include="Assets\Script\saw.cs" />
      <Compile Include="Assets\Script\ScoreText.cs" />
-     <Compile Include="Assets\Script\Timer.cs" />
+     <Compile Include="Assets\Script\timer.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
