--- a/Red Running/Assembly-CSharp.csproj
+++ b/Red Running/Assembly-CSharp.csproj
@@ -51,13 +51,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\enermy.cs" />
-     <Compile Include="Assets\HighScore.cs" />
      <Compile Include="Assets\Script\bgfollow.cs" />
      <Compile Include="Assets\Script\camerafollow.cs" />
      <Compile Include="Assets\Script\coin.cs" />
      <Compile Include="Assets\Script\controller_menu.cs" />
+     <Compile Include="Assets\Script\enermy.cs" />
      <Compile Include="Assets\Script\FixBlock.cs" />
+     <Compile Include="Assets\Script\HighScore.cs" />
      <Compile Include="Assets\Script\Mace_Sc.cs" />
      <Compile Include="Assets\Script\MainMenu.cs" />
      <Compile Include="Assets\Script\movingBg.cs" />
@@ -65,9 +65,9 @@
      <Compile Include="Assets\Script\PauseMenu.cs" />
      <Compile Include="Assets\Script\player_controller.cs" />
      <Compile Include="Assets\Script\RetryMenu.cs" />
-     <Compile Include="Assets\Script\Saw.cs" />
+     <Compile Include="Assets\Script\saw.cs" />
      <Compile Include="Assets\Script\ScoreText.cs" />
-     <Compile Include="Assets\Script\Timer.cs" />
+     <Compile Include="Assets\Script\timer.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
