--- a/Red Running/Red Running.csproj
+++ b/Red Running/Red Running.csproj
@@ -241,6 +241,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\AudioClick.cs" />
+    <Compile Include="Assets\Script\audioController.cs" />
     <Compile Include="Assets\Script\bgfollow.cs" />
     <Compile Include="Assets\Script\camerafollow.cs" />
     <Compile Include="Assets\Script\coin.cs" />
